--- a/index.html
+++ b/index.html
@@ -11873,6 +11873,7 @@ td {
                         setInterval(countdown, 1000);
                     </script>
                         <br> <b style="color: yellow; font-weight: bold;"> Participants are requested to bring their laptops for the hands-on sessions.</b>
+                        <br> <b style="color: yellow; font-weight: bold;"> <a href='https://www.google.com/maps/dir//26.1857946,91.6914697/@26.1856087,91.6913844,19.65z/data=!4m2!4m1!3e0?entry=ttu&g_ep=EgoyMDI0MTIxMS4wIKXMDSoASAFQAw%3D%3D'>Offline Classroom Venue</a></b>
                     </div>
                 </header>
             </div>
