--- a/index.html
+++ b/index.html
@@ -12685,7 +12685,9 @@ td {
                                   <div style="height: 2rem;"></div>
                                     Mattresses, blankets, and other essentials are available for rent at ₹75/day, which must be <b>paid at the hostel</b> upon arrival. Please bring a lock and key for your room. <br>
                                   <div style="height: 2rem;"></div>
-                                     Breakfast, lunch, and dinners are available at the mess of any hostel, including the one you will be staying in. Rates are ₹60 for breakfast, ₹75 for lunch, ₹75 for dinner, and ₹100 for special Dinner (available on Wednesdays and Sundays). Alternatively, you may opt for food from the canteens available in each hostel.
+                                    Breakfast, lunch, and dinners are available at the mess of any hostel, including the one you will be staying in. Rates are ₹60 for breakfast, ₹75 for lunch, ₹75 for dinner, and ₹100 for special Dinner (available on Wednesdays and Sundays). Alternatively, you may opt for food from the canteens available in each hostel.
+                                    <div style="height: 2rem;"></div>
+                                    Participants can enter the campus through either of the two gates: <b>Main Gate</b> or <b>KV Gate</b>. Entry requires an institute ID card and a <b>valid national ID</b> such as a Voter ID or Aadhar Card. <b>Note:</b> KV Gate is closed from 10 PM to 6 AM; during this time, please use the Main Gate.
                                   </p>
 
                 </div>
