--- a/index.html
+++ b/index.html
@@ -12513,9 +12513,9 @@ td {
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>9th January<br>(Thursday)</b></td>
                       <td>Expert<br>Lecture</td>
-                      <td>DL for Vision - I</td>
-                      <td>DL for Vision - II</td>
-                      <td>DL for Vision - III</td>
+                      <td>DL for Remote Sensing</td>
+                      <td>DL for Thermal Imaging</td>
+                      <td>Self supervised Learning for Vision</td>
                       <td>Hands-on</td>
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
@@ -12620,10 +12620,10 @@ td {
                         </div>    
                       <p  class="section-subheading Home text-muted" >
                               <b>9:00 - 10:00 AM</b><br> Expert Lecture<br><br>
-                              <b>10:00 - 11:00 AM</b><br> DL for Vision - I<br><br>
+                              <b>10:00 - 11:00 AM</b><br> DL for Remote Sensing<br><br>
                               <b>11:00 - 11:30 AM</b><br> High Tea<br><br>
-                              <b>11:30 AM - 12:30 PM</b><br> DL for Vision - II<br><br>
-                              <b>12:30 - 1:30 PM</b><br> DL for Vision - III<br><br>
+                              <b>11:30 AM - 12:30 PM</b><br> DL for Thermal Imaging<br><br>
+                              <b>12:30 - 1:30 PM</b><br> Self supervised Learning for Vision<br><br>
                               <b>1:30 - 3:00 PM</b><br> Lunch<br><br>
                               <b>3:00 - 5:00 PM</b><br> Hands-on<br><br>
                       </p>  
